--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java#apache-maven-with-a-settings-path
 
-name: Maven Build
+name: Run LDDTool
 
 on:
    push:
@@ -23,31 +23,11 @@ jobs:
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
 
-    - name: Set up Python 3
-      uses: actions/setup-python@v1
-      with:
-        python-version: '3.7'
-
     - name: Install dependencies
       run: python -m pip install --upgrade pip setuptools wheel
 
-    - name: Publish package
-      run: mvn -B deploy --file pom.xml
-      env:
-        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-     
-    - name: Test Output
-      uses: actions/upload-artifact@v1
-      with:
-        name: test-reports
-        path: target/surefire-reports/
-
-    - name: Adding dependencies
+    - name: Download and Run LDDTool
       run: |
-         sudo apt-get install -y libxml2-dev libxslt1-dev python-libxml2
-
-    - name: Publish new snapshot release
-      run: |
-         pip install pds-github-util
-         snapshot-release --token ${{ secrets.GITHUB_TOKEN }}
+         wget https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v10.1.2/lddtool-10.1.2-bin.tar.gz
+         tar -xvzf lddtool-10.1.2-bin.tar.gz
+         lddtool-10.1.2/bin/lddtool --help
