--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,9 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java#apache-maven-with-a-settings-path
 
-name: Run LDDTool
+---
+
+name: Generate Dictionaries with LDDTool
 
 on: [push, pull_request]
 #  pull_request:
@@ -25,9 +27,20 @@ jobs:
     - name: Install dependencies
       run: python -m pip install --upgrade pip setuptools wheel
 
-    - name: Download and Run LDDTool
+    - name: Download and Unpack LDDTool
       run: |
          wget https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v10.1.2/lddtool-10.1.2-bin.tar.gz
          tar -xf lddtool-10.1.2-bin.tar.gz
+
+    - name: Generate Dictionaries
+      run: |
          lddtool-10.1.2/bin/lddtool --help
          lddtool-10.1.2/bin/lddtool -plJnl PDS4_IMG_IngestLDD_1A10.xml
+
+
+    - name: Add Dictionaries to Pull Request
+      run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git config --local github.token ${{ secrets.GITHUB_TOKEN }}
+          git commit -m "Add changes" -a
