--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,3 +45,4 @@ jobs:
           git config --local github.token ${{ secrets.GITHUB_TOKEN }}
           git add .
           git commit -m "Add changes"
+          git push origin master
