--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,8 +6,8 @@
 name: Generate Dictionaries with LDDTool
 
 on: [push, pull_request]
-#  pull_request:
-#    types: opened
+  #pull_request:
+  #  types: opened
 
 jobs:
   build:
@@ -19,24 +19,17 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-        server-id: ossrh
-        server-username: MAVEN_USERNAME
-        server-password: MAVEN_PASSWORD
-
-    - name: Install dependencies
-      run: python -m pip install --upgrade pip setuptools wheel
+        java-version: 1.8s
 
     - name: Download and Unpack LDDTool
       run: |
-         wget https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v10.1.2/lddtool-10.1.2-bin.tar.gz
-         tar -xf lddtool-10.1.2-bin.tar.gz -C /tmp/
+         wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v10.1.2/lddtool-10.1.2-bin.tar.gz
+         tar -xf /tmp/lddtool-10.1.2-bin.tar.gz -C /tmp/
 
     - name: Generate Dictionaries
       run: |
          /tmp/lddtool-10.1.2/bin/lddtool --help
          /tmp/lddtool-10.1.2/bin/lddtool -plJnl PDS4_IMG_IngestLDD_1A10.xml
-
 
     - name: Add Dictionaries to Pull Request
       run: |
@@ -45,4 +38,4 @@ jobs:
           git config --local github.token ${{ secrets.GITHUB_TOKEN }}
           git add .
           git commit -m "Add changes"
-          git push origin master
+          git push
