--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,7 +3,7 @@
 
 ---
 
-name: Generate Dictionaries with LDDTool
+name: Continuous Integration and Deployment
 
 on: [push, pull_request]
   #pull_request:
@@ -11,34 +11,37 @@ on: [push, pull_request]
 
 jobs:
   build:
-
+    name: "Build Dictionaries"
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
 
-    - name: Download and Unpack LDDTool
-      run: |
-         wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v10.1.2/lddtool-10.1.2-bin.tar.gz
-         tar -xf /tmp/lddtool-10.1.2-bin.tar.gz -C /tmp/
+      - name: Checkout submodules
+        uses: textbook/git-checkout-submodule-action@master
 
-    - name: Generate Dictionaries
-      run: |
-        mkdir -p build; cd build
-        for dir in $(find $(pwd)/../src/dependencies/); do
-          ls $dir
-        done
-        /tmp/lddtool-10.1.2/bin/lddtool -plJnl $(pwd)/../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../src/*IngestLDD*.xml
+      - name: Download and Unpack LDDTool
+        run: |
+           wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v10.1.2/lddtool-10.1.2-bin.tar.gz
+           tar -xf /tmp/lddtool-10.1.2-bin.tar.gz -C /tmp/
 
-    - name: Add Dictionaries to Pull Request
-      run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git config --local github.token ${{ secrets.GITHUB_TOKEN }}
-          git add .
-          git commit -m "Add changes"
-          git push
+      - name: Generate Dictionaries
+        run: |
+          mkdir -p build; cd build
+          for dir in $(find $(pwd)/../src/dependencies/); do
+            ls $dir
+          done
+          /tmp/lddtool-10.1.2/bin/lddtool -plJnl $(pwd)/../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../src/*IngestLDD*.xml
+
+      - name: Add Dictionaries to Pull Request
+        run: |
+            git config --local user.email "action@github.com"
+            git config --local user.name "GitHub Action"
+            git config --local github.token ${{ secrets.GITHUB_TOKEN }}
+            git add .
+            git commit -m "Add changes"
+            git push
