--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,15 +24,27 @@ jobs:
       - name: Checkout submodules
         uses: textbook/git-checkout-submodule-action@master
 
+      - name: Get LDDTool and Validate versions
+        run: |
+          lddtool_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/pds4-information-model/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+          validate_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+
       - name: Download and Unpack LDDTool
         run: |
-           wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v10.1.2/lddtool-10.1.2-bin.tar.gz
-           tar -xf /tmp/lddtool-10.1.2-bin.tar.gz -C /tmp/
+           wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v${lddtool_version}/lddtool-${lddtool_version}-bin.tar.gz
+           tar -xf /tmp/lddtool-${lddtool_version}-bin.tar.gz -C /tmp/
 
       - name: Generate Dictionaries
         run: |
           mkdir -p build; cd build
-          /tmp/lddtool-10.1.2/bin/lddtool -plJnl $(pwd)/../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../src/*IngestLDD*.xml
+          /tmp/lddtool-${lddtool_version}/bin/lddtool -plJnl $(pwd)/../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../src/*IngestLDD*.xml
+
+      - name: Complete Regression Testing (if applicable)
+        run: |
+          if [ -d "$(pwd)/../test" ]; then
+            wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v${validate_version}/validate-{validate_version}-bin.tar.gz
+            tar -xf /tmp/validate-${validate_version}-bin.tar.gz
+
 
       - name: Add Dictionaries to Pull Request
         run: |
@@ -40,5 +52,5 @@ jobs:
             git config --local user.name "GitHub Action"
             git config --local github.token ${{ secrets.GITHUB_TOKEN }}
             git add .
-            git commit -m "Add changes"
+            git commit -m "Auto-generated dictionaries from Github Actions"
             git push
