--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,8 @@ jobs:
         run: |
           export lddtool_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/pds4-information-model/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
           export validate_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+          echo "lddtool: ${lddtool_version}"
+          echo "validate: ${validate_version}"
 
       - name: Download and Unpack LDDTool
         run: |
