--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Download and Unpack LDDTool
         run: |
-          export lddtool_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/pds4-information-model/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+          set-env lddtool_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/pds4-information-model/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
           wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v${lddtool_version}/lddtool-${lddtool_version}-bin.tar.gz
           tar -xf /tmp/lddtool-${lddtool_version}-bin.tar.gz -C /tmp/
 
@@ -38,7 +38,7 @@ jobs:
       - name: Complete Regression Testing (if applicable)
         run: |
           if [ -d "$(pwd)/../test" ]; then
-            export validate_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+            set-env validate_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
             wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v${validate_version}/validate-{validate_version}-bin.tar.gz
             tar -xf /tmp/validate-${validate_version}-bin.tar.gz
           fi
