--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,9 +5,9 @@
 
 name: Continuous Integration and Deployment
 
-on: [push, pull_request]
-  #pull_request:
-  #  types: opened
+on:
+  pull_request:
+    types: opened
 
 jobs:
   build:
@@ -26,7 +26,7 @@ jobs:
 
       - name: Download and Unpack LDDTool
         run: |
-          set-env lddtool_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/pds4-information-model/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+          export lddtool_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/pds4-information-model/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
           wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v${lddtool_version}/lddtool-${lddtool_version}-bin.tar.gz
           tar -xf /tmp/lddtool-${lddtool_version}-bin.tar.gz -C /tmp/
 
@@ -35,13 +35,19 @@ jobs:
           mkdir -p build; cd build
           /tmp/lddtool-${lddtool_version}/bin/lddtool -plJnl $(pwd)/../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../src/*IngestLDD*.xml
 
-      - name: Complete Regression Testing (if applicable)
-        run: |
-          if [ -d "$(pwd)/../test" ]; then
-            set-env validate_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
-            wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v${validate_version}/validate-{validate_version}-bin.tar.gz
-            tar -xf /tmp/validate-${validate_version}-bin.tar.gz
-          fi
+      # - name: Complete Regression Tests
+      #   run: |
+      #     export validate_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+      #     wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v${validate_version}/validate-${validate_version}-bin.tar.gz
+      #     tar -xf /tmp/validate-${validate_version}-bin.tar.gz
+
+      #     /tmp/validate-${validate_version}/bin/validate --skip-content-validation *.xml  # TODO - do not want to validate all XML
+
+      #     if [ -d "$(pwd)/../test" ]; then
+      #       export validate_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+      #       wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v${validate_version}/validate-${validate_version}-bin.tar.gz
+      #       tar -xf /tmp/validate-${validate_version}-bin.tar.gz
+      #     fi
 
       - name: Add Dictionaries to Pull Request
         run: |
