--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,17 +5,22 @@
 
 name: Continuous Integration and Deployment
 
-on:
-  pull_request:
-    types: opened
+on: push
+  # pull_request:
+  #   types: [ opened, edited, reopened ]
 
 jobs:
   build:
     name: "Build Dictionaries"
     runs-on: ubuntu-latest
 
+    env:
+      LDDTOOL_VERSION: $(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/pds4-information-model/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+      VALIDATE_VERSION: $(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -26,27 +31,26 @@ jobs:
 
       - name: Download and Unpack LDDTool
         run: |
-          export lddtool_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/pds4-information-model/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
-          wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v${lddtool_version}/lddtool-${lddtool_version}-bin.tar.gz
-          tar -xf /tmp/lddtool-${lddtool_version}-bin.tar.gz -C /tmp/
+          wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v${LDDTOOL_VERSION}/lddtool-${LDDTOOL_VERSION}-bin.tar.gz
+          tar -xf /tmp/lddtool-${LDDTOOL_VERSION}-bin.tar.gz -C /tmp/
+        LDDTOOL_VERSION: $(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/pds4-information-model/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
 
       - name: Generate Dictionaries
         run: |
           mkdir -p build; cd build
-          /tmp/lddtool-${lddtool_version}/bin/lddtool -plJnl $(pwd)/../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../src/*IngestLDD*.xml
+          /tmp/lddtool-${LDDTOOL_VERSION}/bin/lddtool -plJnl $(pwd)/../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../src/*IngestLDD*.xml
+        env:
 
       # - name: Complete Regression Tests
       #   run: |
-      #     export validate_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
-      #     wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v${validate_version}/validate-${validate_version}-bin.tar.gz
-      #     tar -xf /tmp/validate-${validate_version}-bin.tar.gz
+      #     wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v${VALIDATE_VERSION}/validate-${VALIDATE_VERSION}-bin.tar.gz
+      #     tar -xf /tmp/validate-${VALIDATE_VERSION}-bin.tar.gz
 
-      #     /tmp/validate-${validate_version}/bin/validate --skip-content-validation *.xml  # TODO - do not want to validate all XML
+      #     /tmp/validate-${VALIDATE_VERSION}/bin/validate --skip-content-validation *.xml  # TODO - do not want to validate all XML
 
       #     if [ -d "$(pwd)/../test" ]; then
-      #       export validate_version=$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
-      #       wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v${validate_version}/validate-${validate_version}-bin.tar.gz
-      #       tar -xf /tmp/validate-${validate_version}-bin.tar.gz
+      #       TBD some regression test VALID
+      #       TBD some regression test FAIL
       #     fi
 
       - name: Add Dictionaries to Pull Request
