--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,20 +31,20 @@ jobs:
 
       - name: Download and Unpack LDDTool
         run: |
-          wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v${LDDTOOL_VERSION}/lddtool-${LDDTOOL_VERSION}-bin.tar.gz
-          tar -xf /tmp/lddtool-${LDDTOOL_VERSION}-bin.tar.gz -C /tmp/
+          wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/pds4-information-model/releases/download/v$LDDTOOL_VERSION/lddtool-$LDDTOOL_VERSION-bin.tar.gz
+          tar -xf /tmp/lddtool-$LDDTOOL_VERSION-bin.tar.gz -C /tmp/
 
       - name: Generate Dictionaries
         run: |
           mkdir -p build; cd build
-          /tmp/lddtool-${LDDTOOL_VERSION}/bin/lddtool -plJnl $(pwd)/../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../src/*IngestLDD*.xml
+          /tmp/lddtool-$LDDTOOL_VERSION/bin/lddtool -plJnl $(pwd)/../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../src/*IngestLDD*.xml
 
       # - name: Complete Regression Tests
       #   run: |
-      #     wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v${VALIDATE_VERSION}/validate-${VALIDATE_VERSION}-bin.tar.gz
+      #     wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v$VALIDATE_VERSION/validate-${VALIDATE_VERSION}-bin.tar.gz
       #     tar -xf /tmp/validate-${VALIDATE_VERSION}-bin.tar.gz
 
-      #     /tmp/validate-${VALIDATE_VERSION}/bin/validate --skip-content-validation *.xml  # TODO - do not want to validate all XML
+      #     /tmp/validate-$VALIDATE_VERSION/bin/validate --skip-content-validation *.xml  # TODO - do not want to validate all XML
 
       #     if [ -d "$(pwd)/../test" ]; then
       #       TBD some regression test VALID
