--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      LDDTOOL_VERSION: $(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/pds4-information-model/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
-      VALIDATE_VERSION: $(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+      LDDTOOL_VERSION: 
+      
 
     steps:
       - uses: actions/checkout@v2
@@ -28,6 +28,11 @@ jobs:
 
       - name: Checkout submodules
         uses: textbook/git-checkout-submodule-action@master
+
+      - name: Get LDDTool and Validate Versions
+        run: |
+          echo ::set-env name=LDDTOOL_VERSION::$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/pds4-information-model/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
+          echo ::set-env name=VALIDATE_VERSION::$(curl --silent "https://api.github.com/repos/NASA-PDS-Incubator/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
 
       - name: Download and Unpack LDDTool
         run: |
