--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,9 +52,9 @@ jobs:
 
           echo "+++ Generate dictionaries"
           if [ -d "$(pwd)/../../src/dependencies" ]; then
-            files=$(pwd)/../../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../../src/*IngestLDD*.xml
+            files="$(pwd)/../../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../../src/*IngestLDD*.xml"
           else
-            files=$(pwd)/../../src/*IngestLDD*.xml
+            files="$(pwd)/../../src/*IngestLDD*.xml"
           fi
 
           /tmp/lddtool-$LDDTOOL_VERSION/bin/lddtool -plJn $files
