--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      LDDTOOL_VERSION:
+      VAL_REPORT_DIR: $GITHUB_WORKSPACE/validation-reports
+      REG_TEST_DIR: $GITHUB_WORKSPACE/test
 
     steps:
       - uses: actions/checkout@v2
@@ -38,7 +39,7 @@ jobs:
           echo ::set-env name=VALIDATE_VERSION::$(curl --silent "https://api.github.com/repos/NASA-PDS/validate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/' | sed 's/v//')
 
           # IM Version is only needed for release time, but keeping here for now
-          # echo ::set-env name=IM_VERSION::$(curl --silent "https://raw.githubusercontent.com/NASA-PDS/pds4-information-model/v$LDDTOOL_VERSION/model-ontology/src/ontology/Data/config.properties" | grep "infoModelVersionId" | awk -F= '{print $NF}')
+          echo ::set-env name=IM_VERSION::$(curl --silent "https://raw.githubusercontent.com/NASA-PDS/pds4-information-model/v$LDDTOOL_VERSION/model-ontology/src/ontology/Data/config.properties" | grep "infoModelVersionId" | awk -F= '{print $NF}')
 
       - name: Download and Unpack LDDTool
         run: |
@@ -51,30 +52,48 @@ jobs:
           mkdir -p build/development/; cd build/development/; rm -fr ./*
 
           echo "+++ Generate dictionaries"
-          if [ -d "$(pwd)/../../src/dependencies" ]; then
-            files="$(pwd)/../../src/dependencies/*/src/*IngestLDD*.xml $(pwd)/../../src/*IngestLDD*.xml"
+          dependencies_dir=$GITHUB_WORKSPACE/src/dependencies
+          if [ -d "$dependencies_dir" ]; then
+            files="$dependencies_dir/*/src/*IngestLDD*.xml $GITHUB_WORKSPACE/src/*IngestLDD*.xml"
           else
-            files="$(pwd)/../../src/*IngestLDD*.xml"
+            files="$GITHUB_WORKSPACE/src/*IngestLDD*.xml"
           fi
 
           /tmp/lddtool-$LDDTOOL_VERSION/bin/lddtool -plJn $files
 
       - name: Validate Schemas and Schematrons
         run: |
-          wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v$VALIDATE_VERSION/validate-${VALIDATE_VERSION}-bin.tar.gz
+          wget --directory-prefix=/tmp https://github.com/NASA-PDS/validate/releases/download/v$VALIDATE_VERSION/validate-${VALIDATE_VERSION}-bin.tar.gz
           tar -xf /tmp/validate-${VALIDATE_VERSION}-bin.tar.gz -C /tmp/
 
-          /tmp/validate-$VALIDATE_VERSION/bin/validate -x *.xsd -S *.sch -t *.xml
+          mkdir -p $VAL_REPORT_DIR
+          /tmp/validate-$VALIDATE_VERSION/bin/validate --skip-content-validation -R pds4.label -x *.xsd -S *.sch -t *.xml | tee -a $VAL_REPORT_DIR/validate_schemas_report.txt
+        id: validate_schemas
+        continue-on-error: True
 
       # - name: Complete Regression Tests (if applicable)
       #   run: |
-      #     wget --directory-prefix=/tmp https://github.com/NASA-PDS-Incubator/validate/releases/download/v$VALIDATE_VERSION/validate-${VALIDATE_VERSION}-bin.tar.gz
+      #     wget --directory-prefix=/tmp https://github.com/NASA-PDS/validate/releases/download/v$VALIDATE_VERSION/validate-${VALIDATE_VERSION}-bin.tar.gz
       #     tar -xf /tmp/validate-${VALIDATE_VERSION}-bin.tar.gz
 
-      #     if [ -d "$(pwd)/../test" ]; then
-      #       TBD some regression test VALID
-      #       TBD some regression test FAIL
+      #     if [ -d "$TEST_DIR" ]; then
+      #       # Run test expected valid
+      #       /tmp/validate-$VALIDATE_VERSION/bin/validate --skip-content-validation -R pds4.label -x *.xsd -S *.sch -t $REG_TEST_DIR/*VALID.xml | tee -a $VAL_REPORT_DIR/validate_regtest_report.txt
+
+      #       # Run tests expected invalid
+      #       # TBD some regression test FAIL
       #     fi
+      #   id: regression_tests
+      #   continue-on-error: True
+
+      - name: Upload Validation Reports
+        uses: actions/upload-artifact@v1
+        with:
+          name: validate-reports
+          path: $VAL_REPORT_DIR
+
+      - name: Check Validation Success
+        if: ${{ success() }}
 
       - name: Add Dictionaries to Pull Request
         run: |
