--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,8 +19,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      VAL_REPORT_DIR: ${{ $GITHUB_WORKSPACE }}/validation-reports
-      REG_TEST_DIR: ${{ $GITHUB_WORKSPACE }}/test
+      VAL_REPORT_DIR: ${{ format({0}/{1}/, env.GITHUB_WORKSPACE, 'validation-reports') }}
+      REG_TEST_DIR: ${{ format({0}/{1}/, env.GITHUB_WORKSPACE, 'test') }}
 
     steps:
       - uses: actions/checkout@v2
@@ -90,7 +90,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: validation-reports
-          path: ${{ $VAL_REPORT_DIR }}
+          path: ${{ env.VAL_REPORT_DIR }}
 
       - name: Add Dictionaries to Pull Request
         run: |
