--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -60,7 +60,6 @@ jobs:
             alphadict[x] = str(y)
           print(''.join(str(alphadict[int(val)]) for val in '$IM_VERSION'.split('.')))
           ")
-          echo $alpha_version
 
           echo ::set-env name=IM_VERSION_ALPHA::$(echo alpha_version)
 
@@ -90,7 +89,7 @@ jobs:
           wget --directory-prefix=/tmp https://github.com/NASA-PDS/validate/releases/download/v$VALIDATE_VERSION/validate-${VALIDATE_VERSION}-bin.tar.gz
           tar -xf /tmp/validate-${VALIDATE_VERSION}-bin.tar.gz -C /tmp/
 
-          /tmp/validate-$VALIDATE_VERSION/bin/validate --skip-content-validation -R pds4.label -x $DEPLOY_DIR/*.xsd -S *.sch -t $DEPLOY_DIR/*.xml
+          /tmp/validate-$VALIDATE_VERSION/bin/validate --skip-content-validation -R pds4.label -x $DEPLOY_DIR/*.xsd -S $DEPLOY_DIR/*.sch -t $DEPLOY_DIR/*.xml
 
       - name: Complete Regression Tests (if applicable)
         run: |
