--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -102,9 +102,9 @@ jobs:
             wget --directory-prefix=/tmp "https://pds.nasa.gov/pds4/pds/v1/PDS4_PDS_$IM_VERSION_ALPHA.sch"
 
             # Find schema filename
-            xsd=$(find $DEPLOY_DIR/*.xsd | head -1)
+            xsd=file:\/\/$(find $DEPLOY_DIR/*.xsd | head -1 | sed 's/\//\\\//g')
 
-            # Run test expected valid
+            # Update dictionaries in 
             sed -i "s/\[IM_VERSION_ALPHA\]/$IM_VERSION_ALPHA/g" $REG_TEST_DIR/*.xml
             sed -i "s/\[IM_VERSION\]/$IM_VERSION/g" $REG_TEST_DIR/*.xml
             sed -i "s/\[SCHEMA_LOCATION\]/$xsd/g" $REG_TEST_DIR/*.xml
