--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -93,7 +93,7 @@ jobs:
 
       - name: Complete Regression Tests (if applicable)
         run: |
-          if [ -d "$TEST_DIR" ]; then
+          if [ -d "$REG_TEST_DIR" ]; then
 
             # Get the PDS core dictionaries
             wget --directory-prefix=/tmp "https://pds.nasa.gov/pds4/pds/v1/PDS4_PDS_$IM_VERSION_ALPHA.sch"
