--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,7 +12,7 @@
 # Go to https://github.com/orgs/pds-data-dictionaries/teams to
 # find out more information about your applicable team
 
-#*       @pds-data-dictionaries/pds-ldd-img-ccb
+#*       @pds-data-dictionaries/pds-ldd-<namespace_id>-ccb
 
 **************************************************************
 
