--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -85,6 +85,8 @@ jobs:
 
           echo "+++ Generating dictionaries for $files"
           echo /tmp/lddtool-$LDDTOOL_VERSION/bin/lddtool -plJn $files
+          java -version
+          which java
 
       - name: Validate Schemas and Schematrons
         run: |
