--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Generate Dictionaries
         run: |
           echo "+++ Cleanup development versions if they exist"
-          mkdir -p $DEPLOY_DIR; git rm -fr $DEPLOY_DIR/*; cd $DEPLOY_DIR;
+          git rm -fr $DEPLOY_DIR/*; mkdir -p $DEPLOY_DIR; cd $DEPLOY_DIR;
 
           echo "+++ Generate dictionaries"
           dependencies_dir=$GITHUB_WORKSPACE/src/dependencies
