--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -84,9 +84,7 @@ jobs:
           fi
 
           echo "+++ Generating dictionaries for $files"
-          echo /tmp/lddtool-$LDDTOOL_VERSION/bin/lddtool -plJn $files
-          java -version
-          which java
+          /tmp/lddtool-$LDDTOOL_VERSION/bin/lddtool -plJn $files
 
       - name: Validate Schemas and Schematrons
         run: |
