--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -121,5 +121,6 @@ jobs:
             git config --local github.token ${{ secrets.GITHUB_TOKEN }}
             git add $DEPLOY_DIR
             git commit -m "Auto-generated dictionaries from Github Actions"
-            git push
+            git branch
+            #git push 
         if: ${{ success() }}
