--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,12 +7,11 @@
 # review when someone opens a pull request.
 
 # ***************************************************************
-# Uncomment and replace ldd-img-ccb with your appropriate team name.
 #
 # Go to https://github.com/orgs/pds-data-dictionaries/teams to
 # find out more information about your applicable team
 
-#*       @pds-data-dictionaries/pds-ldd-<namespace_id>-ccb
+*       @pds-data-dictionaries/pds-ldd-ccb
 
 **************************************************************
 
