--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,14 +5,7 @@
 
 name: Continuous Integration and Deployment
 
-on:
-  push:
-    branches:
-      - master
-      # - pulls/()
-  pull_request:
-    branches:
-      - master
+on: push
 
 jobs:
   build:
