--- a/.github/workflows/ldd-ci.yml
+++ b/.github/workflows/ldd-ci.yml
@@ -14,7 +14,7 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
     - id: set-matrix
-      run: echo "::set-output name=matrix::{\"pds4_version\":[ \"1.14.0.0\", \"1.15.0.0\" ]}"
+      run: echo "::set-output name=matrix::{\"include\": \"foo\"}"
 
   build: # job 1
     name: 'LDD Build'
@@ -37,4 +37,4 @@ jobs:
 
       - name: Check
         run: |
-          echo "FOOO: " ${{ matrix.pds4_version }}
+          echo "FOOO: " ${{ matrix.include }}
