--- a/.github/workflows/ldd-ci.yml
+++ b/.github/workflows/ldd-ci.yml
@@ -13,7 +13,15 @@ jobs:
     steps:
     - id: set-matrix
       # run: echo "::set-output name=matrix::{\"include\":[{\"project\":\"1.14.0.0\",\"config\":\"Debug\"},{\"project\":\"bar\",\"config\":\"Release\"}]}"
-      run: echo "::set-output name=matrix::{\"pds4_version\":[\"1.14.0.0\",\"1.15.0.0\"]}"
+      run: |
+        while read -r line; do
+            if [[ ! -z "$line" ]]; then
+                versions=$versions'\"'$line'\"',
+            fi
+        done < pds4_versions.txt
+        echo "${versions::-1}"
+        echo "::set-output name=matrix::{\"pds4_version\":${versions::-1}}"
+
   job2:
     needs: job1
     runs-on: ubuntu-latest
