--- a/.github/workflows/ldd-ci.yml
+++ b/.github/workflows/ldd-ci.yml
@@ -18,7 +18,7 @@ jobs:
             if [[ ! -z "$line" ]]; then
                 versions=$versions'\"'$line'\"',
             fi
-        done < pds4_versions.txt
+        done < ./pds4_versions.txt
         echo "${versions::-1}"
         echo "::set-output name=matrix::{\"pds4_version\":${versions::-1}}"
 
