--- a/.github/workflows/ldd-ci.yml
+++ b/.github/workflows/ldd-ci.yml
@@ -17,10 +17,11 @@ jobs:
         run: |
           while read -r line; do
               if [[ ! -z "$line" ]]; then
-                  versions=$versions'\"'$line'\"',
+                  versions=$versions'"'$line'"',
               fi
           done < $GITHUB_WORKSPACE/pds4_versions.txt
           echo "${versions::-1}"
+          echo "{\"pds4_version\":${versions::-1}}"
           echo "::set-output name=matrix::{\"pds4_version\":${versions::-1}}"
 
   job2:
