--- a/.github/workflows/ldd-ci.yml
+++ b/.github/workflows/ldd-ci.yml
@@ -20,9 +20,9 @@ jobs:
                   versions=$versions'"'$line'"',
               fi
           done < $GITHUB_WORKSPACE/pds4_versions.txt
-          echo "${versions::-1}"
-          echo "{\"pds4_version\":${versions::-1}}"
-          echo "::set-output name=matrix::{\"pds4_version\":${versions::-1}}"
+          foo=${versions::-1}
+          echo "{\"pds4_version\":${foo}}"
+          echo "::set-output name=matrix::{\"pds4_version\":${foo}}"
 
   job2:
     needs: job1
