--- a/.github/workflows/ldd-ci.yml
+++ b/.github/workflows/ldd-ci.yml
@@ -22,13 +22,14 @@ jobs:
           done < $GITHUB_WORKSPACE/pds4_versions.txt
           foo=${versions::-1}
           echo "{\"pds4_version\":${foo}}"
-          echo "::set-output name=matrix::{\"pds4_version\":$foo}"
+          echo "::set-output name=matrix::$foo"
 
   job2:
     needs: job1
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{fromJson(needs.job1.outputs.matrix)}}
+      matrix:
+          pds4_versions: ${{needs.job1.outputs.matrix}}
     steps:
     - run:
         echo ${{matrix.pds4_version}}
