--- a/.github/workflows/ldd-ci.yml
+++ b/.github/workflows/ldd-ci.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-          pds4_versions: ${{needs.job1.outputs.matrix}}
+          pds4_versions: [${{needs.job1.outputs.matrix}}]
     steps:
     - run:
         echo ${{matrix.pds4_version}}
