--- a/.github/workflows/ldd-ci.yml
+++ b/.github/workflows/ldd-ci.yml
@@ -20,16 +20,16 @@ jobs:
                   versions=$versions'"'$line'"',
               fi
           done < $GITHUB_WORKSPACE/pds4_versions.txt
-          foo=${versions::-1}
+          foo=[${versions::-1}]
           echo "{\"pds4_version\":${foo}}"
-          echo "::set-output name=matrix::$foo"
+          echo "::set-output name=versions::$foo"
 
   job2:
     needs: job1
     runs-on: ubuntu-latest
     strategy:
       matrix:
-          pds4_versions: [${{needs.job1.outputs.matrix}}]
+          pds4_versions: ${{needs.job1.outputs.versions}}
     steps:
     - run:
         echo ${{matrix.pds4_version}}
