--- a/.github/workflows/ldd-ci.yml
+++ b/.github/workflows/ldd-ci.yml
@@ -20,7 +20,7 @@ jobs:
                   versions=$versions'"'$line'"',
               fi
           done < $GITHUB_WORKSPACE/pds4_versions.txt
-          foo=[${versions::-1}]
+          foo="[${versions::-1}]"
           echo "{\"pds4_version\":${foo}}"
           echo "::set-output name=matrix::$foo"
 
